# todo-bot

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/: manage.py
backend/auth_user/: admin.py  models.py  serializers.py  urls.py  views.py
backend/auth_user/migrations/: 0001_initial.py  0002_alter_tgprofile_tg_id.py  0003_alter_tgprofile_user_webprofile.py  0004_alter_tgprofile_user_alter_webprofile_user.py
backend/todo/: admin.py  models.py  utils.py  views.py
backend/todo/serializers/: task_serializers.py
backend/todo_manager/: config.py  settings.py  urls.py
bot/: config.py  main.py
bot/api/: urls.py
bot/crud/: create.py  read.py  update.py
bot/dialogs/registration/: handlers.py  router.py
bot/dialogs/todo/create/: dialog.py  handlers.py  router.py
bot/dialogs/todo/delete/: router.py  windows.py
bot/dialogs/todo/read/: handlers.py  router.py
bot/dialogs/todo/update/: handlers.py  router.py  windows.py
